helm/k8s/ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: observability # Matches Grafana/Jaeger namespace
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-grafana
                port:
                  number: 80 # Reverted back to standard service port

    # 4. Jaeger Tracing -> http://jaeger.local/
    - host: jaeger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686


    # 3. Grafana Monitoring -> http://grafana.local/
    - host: tempo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-tempo
                port:
                  number: 3100
