helm/k8s/ingress/network-ingress.yaml






apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: network-ingress
  namespace: network-monitoring
  # annotations:
  #   # Tells Nginx that the backend service expects secure HTTPS data streams
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: network.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nagios-ui-service
                port:
                  number: 80
